# pytest-demo

./: .env.example  .gitignore  architecture.md  conftest.py  home2_output.txt  home_output.txt  index.html  pyproject.toml  snapshot2_output.txt  snapshot_output.txt  test_output.txt  test_output2.txt  test_output3.txt  test_run1.txt  test_run2.txt
.github/workflows/: ci.yml
1/: index.html
1/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1/export/: influxDbData.txt  prometheusData.txt
1/history/: duration-trend.json  history-trend.json  history.json
1/widgets/: duration.json  severity.json  suites.json  summary.json
10/: index.html
10/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: categories-trend.json  history.json  retry-trend.json
10/widgets/: duration-trend.json  duration.json  history-trend.json  severity.json  suites.json  summary.json
11/: index.html
11/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
11/history/: duration-trend.json  history-trend.json  history.json
11/widgets/: categories-trend.json  duration.json  retry-trend.json  severity.json  summary.json
12/: index.html
12/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
12/export/: influxDbData.txt  prometheusData.txt
12/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
12/widgets/: duration.json  history-trend.json  severity.json  suites.json  summary.json
13/: index.html
13/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
13/export/: influxDbData.txt  prometheusData.txt
13/history/: duration-trend.json  history-trend.json  history.json
13/widgets/: categories-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
14/: index.html
14/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
14/export/: influxDbData.txt  prometheusData.txt
14/history/: duration-trend.json  history.json
14/widgets/: categories-trend.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
15/: index.html
15/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
15/export/: influxDbData.txt  prometheusData.txt
15/history/: history.json  retry-trend.json
15/widgets/: categories-trend.json  duration-trend.json  history-trend.json  severity.json  status-chart.json  suites.json  summary.json
16/: index.html
16/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
16/export/: influxDbData.txt  prometheusData.txt
16/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
16/widgets/: duration-trend.json  duration.json  severity.json  suites.json  summary.json
17/: index.html
17/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
17/export/: influxDbData.txt  prometheusData.txt
17/history/: history.json
17/widgets/: categories-trend.json  duration-trend.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
18/: index.html
18/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
18/export/: influxDbData.txt  prometheusData.txt
18/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
18/widgets/: behaviors.json  duration-trend.json  duration.json  severity.json  suites.json  summary.json
19/: index.html
19/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
19/export/: influxDbData.txt  prometheusData.txt
19/history/: duration-trend.json  history.json  retry-trend.json
19/widgets/: behaviors.json  categories-trend.json  (+5 more)
2/: index.html
20/: index.html
21/: index.html
22/: index.html
23/: index.html
24/: index.html
25/: index.html
26/: index.html
27/: index.html
28/: index.html
29/: index.html
3/: index.html
30/: index.html
31/: index.html
32/: index.html
33/: index.html
4/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
core/: ae_base_client.py  ae_models.py  base_api_client.py  base_page.py  config.py  exceptions.py  state_validators.py
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
models/: base_model.py
posts/: conftest.py
products/: conftest.py
users/: conftest.py
(+5379 files in other folders)
