[project]
name = "pytest-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "pytest-playwright",
    "pydantic>=2",
    "pydantic-settings",
    "allure-pytest",
    "pytest-xdist[psutil]",
    "pytest-rerunfailures",
    "filelock",
]

[tool.pytest.ini_options]
addopts        = ""
testpaths      = ["tests"]
pythonpath     = ["."]
log_cli        = true
log_cli_level  = "INFO"
log_file_level = "DEBUG"
markers = [
    "smoke: critical-path tests",
    "api: REST API tests",
    "ui: browser UI tests",
    "slow: long-running end-to-end flows",
]

# Run profiles (mutually exclusive — xdist and rerunfailures cannot be active together):
#   parallel:  uv run pytest -n auto
#   stable:    uv run pytest --reruns 1 --reruns-delay 2
#
# Allure report:
#   serve (opens browser):  allure serve output/allure-results
#   build static HTML:      allure generate output/allure-results --output output/allure-report --clean
