[project]
name = "pytest-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "pytest-playwright",
    "pydantic>=2",
    "pydantic-settings",
    "allure-pytest",
    "pytest-xdist[psutil]",
    "pytest-rerunfailures",
    "filelock",
]

[tool.pytest.ini_options]
addopts        = ""
testpaths      = ["tests"]
pythonpath     = ["."]
log_cli        = true
log_cli_level  = "INFO"
log_file_level = "DEBUG"
log_format      = "%(asctime)s %(levelname)-8s %(name)s: %(message)s"
log_cli_format  = "%(asctime)s %(levelname)-8s %(name)s: %(message)s"
log_file_format = "%(asctime)s %(levelname)-8s %(name)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "smoke: critical-path tests",
    "api: REST API tests",
    "ui: browser UI tests",
    "slow: long-running end-to-end flows",
    "flaky: known intermittently-failing tests that need stabilization",
    "visual: visual regression snapshot tests (run --update-snapshots to create baselines)",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]

# Run profiles (mutually exclusive — xdist and rerunfailures cannot be active together):
#   parallel:  uv run pytest -n auto
#   stable:    uv run pytest --reruns 1 --reruns-delay 2
#
# Allure report:
#   serve (opens browser):  allure serve output/allure-results
#   build static HTML:      allure generate output/allure-results --output output/allure-report --clean
#
# Type checking:
#   uv run mypy conftest.py core/ models/ users/ posts/ products/ checkout/ contact/ ae_account/ ae_products/ tests/

[tool.mypy]
strict = true
explicit_package_bases = true
exclude = ["\\.venv"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["allure.*", "filelock.*"]
ignore_missing_imports = true
