[project]
name = "pytest-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "pytest-playwright",
    "playwright>=1.23",
    "pydantic>=2",
    "pydantic-settings",
    "allure-pytest",
    "pytest-xdist[psutil]",
    "pytest-rerunfailures",
]

[tool.pytest.ini_options]
addopts        = "-n 2"
testpaths      = ["tests"]
pythonpath     = ["."]
log_cli        = true
log_cli_level  = "INFO"
log_file_level = "DEBUG"
log_format      = "%(asctime)s %(levelname)-8s %(name)s: %(message)s"
log_cli_format  = "%(asctime)s %(levelname)-8s %(name)s: %(message)s"
log_file_format = "%(asctime)s %(levelname)-8s %(name)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "smoke: critical-path tests",
    "api: REST API tests",
    "ui: browser UI tests",
    "slow: long-running end-to-end flows",
    "flaky: known intermittently-failing tests that need stabilization",
    "visual: visual regression snapshot tests (run --update-snapshots to create baselines)",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]

# Run profiles (mutually exclusive — xdist and rerunfailures cannot be active together):
#   default (parallel, 2 workers):  uv run pytest
#   stable (sequential + reruns):   uv run pytest -p no:xdist --reruns 1 --reruns-delay 2
#
# Visual regression baselines (create/update before normal run):
#   uv run pytest tests/products/test_product_visual.py --update-snapshots
#
# Allure report:
#   serve (opens browser):  allure serve output/allure-results
#   build static HTML:      allure generate output/allure-results --output output/allure-report --clean
#
# Type checking:
#   uv run mypy conftest.py core/ models/ users/ posts/ products/ checkout/ contact/ ae_account/ ae_products/ tests/

[tool.mypy]
strict = true
explicit_package_bases = true
exclude = ["\\.venv"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["allure.*"]
ignore_missing_imports = true
